ADD first independent logic files, attempted to save the sessionStorage on mongoDB, but just set the client connection and schemas. FIX extensions logic

--- a/extensions/wishlist/blocks/wishlist.liquid
+++ b/extensions/wishlist/blocks/wishlist.liquid
@@ -6,7 +6,7 @@
         <div class="wishlist-container__header--close">{% render 'close' %}</div>
       </div>
       {% if customer != blank %}
-          <script>sessionStorage.setItem("user", "{{ customer.id }}")</script>
+          <script>sessionStorage.setItem("userId", "{{ customer.id }}")</script>
           <div class="wishlist-container__products">
 
           </div>
@@ -20,7 +20,6 @@
       {% endif %}
   </div>
 </div>
-
 
 {% schema %}
 {
